force-app/main/default/objects/Beat__c/Beat__c.object-meta.xml
<CustomObject>
    <label>Beat</label>
    <pluralLabel>Beats</pluralLabel>
    <description>Beat</description>
    <nameField>
        <label>Beat Name</label>
        <type>AutoNumber</type>
        <displayFormat>OBEAT-{000000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>