force-app/main/default/objects/Beat__c/fields/Owner_Rep__c.field-meta.xml
<CustomField>
    <fullName>Owner_Rep__c</fullName>
    <label>Owner Rep</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Owned Beats</relationshipLabel>
    <relationshipName>Owned_Order_Beats</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Owner Rep</description>
</CustomField>